# accelerated-computing-hub

henry_docker/: Dockerfile
practice/cuda-cpp/notebooks/01.02-Execution-Spaces/: 01.02.02-Exercise-Annotate-Execution-Spaces.ipynb
tutorials/cuda-cpp/: README.md
tutorials/cuda-cpp/notebooks/01.02-Execution-Spaces/: 01.02.01-Execution-Spaces.ipynb  01.02.02-Exercise-Annotate-Execution-Spaces.ipynb  01.02.03-Exercise-Changing-Execution-Space.ipynb  01.02.04-Exercise-Compute-Median-Temperature.ipynb
tutorials/cuda-cpp/notebooks/01.02-Execution-Spaces/Sources/: .clangd  01.02.01-henry-practice.cpp  CMakeLists.txt  ach.h  henry-practice-no-magic-execution-space-changes.cpp  henry-practice-no-magic-execution-space-changes.cu  port-sort-to-gpu.cpp
tutorials/cuda-cpp/notebooks/01.03-Extending-Algorithms/: 01.03.01-Extending-Algorithms.ipynb  01.03.02-Exercise-Computing-Variance.ipynb
tutorials/cuda-cpp/notebooks/01.03-Extending-Algorithms/Sources/: variance.cpp
tutorials/cuda-cpp/notebooks/01.04-Vocabulary-Types/: 01.04.01-Vocabulary-Types.ipynb
tutorials/cuda-cpp/notebooks/01.04-Vocabulary-Types/Sources/: naive-heat-2D.cpp
